# R-seau-TP1

./: README.md
exe_client/: CMakeLists.txt
exe_client/main/myexe/: CMakeLists.txt
exe_client/main/myexe/src/: ThunderChatClient.cpp  main.cpp
exe_client/main/mylib/: CMakeLists.txt
exe_client/main/mylib/include/: Message.hpp  ThunderChatClient.cpp
exe_client/test/model_viewer/: CMakeLists.txt
exe_server/: CMakeLists.txt
exe_server/main/myexe/src/: ThunderChatServer.cpp  main.cpp
lib_client/: CMakeLists.txt
lib_client/cmake/: HunterLibs.cmake
lib_client/main/myexe/: CMakeLists.txt
lib_client/main/myexe/src/: exemple.json  main.cpp
lib_client/main/mylib/: CMakeLists.txt
lib_client/main/mylib/include/: Message.hpp  ThunderChatClient.hpp
lib_client/main/mylib/src/: Message.cpp  ThunderChatClient.cpp
lib_client/test/model_viewer/: CMakeLists.txt
lib_server/: CMakeLists.txt
lib_server/cmake/: HunterLibs.cmake
lib_server/main/myexe/: CMakeLists.txt
lib_server/main/myexe/src/: main.cpp
lib_server/main/mylib/: CMakeLists.txt
lib_server/main/mylib/include/: Connection.hpp  Message.hpp  ThunderChatServer.hpp
lib_server/main/mylib/src/: Connection.cpp  Message.cpp  (+1 more)
lib_server/test/model_viewer/: CMakeLists.txt
lib_server_v2/: CMakeLists.txt
lib_server_v2/cmake/: HunterLibs.cmake
lib_server_v2/main/myexe/: CMakeLists.txt
lib_server_v2/main/mylib/: CMakeLists.txt
lib_server_v2/main/mylib/include/: Connection.hpp  Message.hpp  ThunderChatServer.hpp
lib_server_v2/main/mylib/src/: Connection.cpp  Message.cpp  ThunderChatServer.cpp
(+1 files in other folders)
